parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM np_set_curr_proc ID np_GOTO SEMICOLON programB np_prog_end
Rule 2     programB -> vars programC
Rule 3     programB -> programC
Rule 4     programC -> function programC
Rule 5     programC -> main
Rule 6     vars -> VARS L_BRACE varsB R_BRACE
Rule 7     varsB -> type np_set_curr_datatype COLON varsC SEMICOLON
Rule 8     varsB -> type np_set_curr_datatype COLON varsC SEMICOLON varsB
Rule 9     varsC -> varsD
Rule 10    varsC -> varsD COMMA varsC
Rule 11    varsD -> ID np_add_var
Rule 12    varsD -> ID L_BRACKET CTE_INT R_BRACKET np_add_arr
Rule 13    function -> FUNCTION func_type ID np_set_curr_proc L_PAR functionB R_PAR np_set_quad_start vblock np_ENDFunc
Rule 14    functionB -> params
Rule 15    functionB -> empty
Rule 16    main -> MAIN np_set_curr_proc np_GOTO_END L_PAR R_PAR vblock
Rule 17    type -> INT np_add_datatype
Rule 18    type -> FLOAT np_add_datatype
Rule 19    type -> BOOL np_add_datatype
Rule 20    type -> CHAR np_add_datatype
Rule 21    type -> STRING np_add_datatype
Rule 22    var -> ID L_BRACKET np_stop exp np_end np_arr_end R_BRACKET
Rule 23    var -> ID np_push_operand
Rule 24    func_type -> VOID np_add_datatype
Rule 25    func_type -> type
Rule 26    params -> type COLON ID np_add_param
Rule 27    params -> type COLON ID np_add_param COMMA params
Rule 28    params -> empty
Rule 29    block -> L_BRACE blockB R_BRACE
Rule 30    blockB -> statement blockB
Rule 31    blockB -> empty
Rule 32    vblock -> L_BRACE vars vblockB R_BRACE
Rule 33    vblock -> block
Rule 34    vblockB -> statement vblockB
Rule 35    vblockB -> empty
Rule 36    statement -> assign
Rule 37    statement -> condicional
Rule 38    statement -> read
Rule 39    statement -> write
Rule 40    statement -> loop_cond
Rule 41    statement -> loop_range
Rule 42    statement -> return
Rule 43    statement -> void_func
Rule 44    void_func -> func_call SEMICOLON
Rule 45    void_func -> PLOTXY L_PAR ID COMMA ID R_PAR np_def_func_2param SEMICOLON
Rule 46    void_func -> REGRESSION L_PAR ID COMMA ID R_PAR np_def_func_2param SEMICOLON
Rule 47    assign -> var oper_assign np_push_operator expression np_end SEMICOLON
Rule 48    condicional -> IF L_PAR expression np_end np_GOTOF R_PAR block cond2 np_GOTO_END
Rule 49    cond2 -> np_GOTO_ELSE ELSE block
Rule 50    cond2 -> empty
Rule 51    read -> READ L_PAR read2 R_PAR SEMICOLON
Rule 52    read2 -> var np_read
Rule 53    read2 -> var np_read COMMA read2
Rule 54    write -> WRITE L_PAR writeB R_PAR SEMICOLON
Rule 55    writeB -> expression np_end np_write writeC
Rule 56    writeB -> CTE_STRING np_push_cte_str np_write writeC
Rule 57    writeC -> COMMA writeB
Rule 58    writeC -> empty
Rule 59    loop_cond -> WHILE L_PAR np_CHECKPOINT expression R_PAR np_end np_GOTOF block np_GOTO_WHILE
Rule 60    loop_range -> FOR var EQUAL np_push_operator exp np_set_CV TO exp np_end np_comp_CV_FV block np_GOTO_FOR
Rule 61    return -> RETURN L_PAR np_stop exp np_end np_set_return R_PAR SEMICOLON
Rule 62    func_call -> ID np_ERA L_PAR func_callB R_PAR np_GOSUB
Rule 63    func_callB -> func_call_arguments
Rule 64    func_callB -> empty
Rule 65    func_call_arguments -> np_stop exp np_end np_param func_call_argumentsB
Rule 66    func_call_argumentsB -> COMMA func_call_arguments
Rule 67    func_call_argumentsB -> empty
Rule 68    def_func -> def_funcB L_PAR ID R_PAR np_def_func_1param
Rule 69    def_funcB -> MIN
Rule 70    def_funcB -> MAX
Rule 71    def_funcB -> MEAN
Rule 72    def_funcB -> MEDIAN
Rule 73    def_funcB -> MODE
Rule 74    def_funcB -> VARIANCE
Rule 75    oper_assign -> EQUAL
Rule 76    oper_assign -> MULT_EQ
Rule 77    oper_assign -> DIV_EQ
Rule 78    oper_assign -> PLUS_EQ
Rule 79    oper_assign -> MINUS_EQ
Rule 80    expression -> logic expressionB
Rule 81    expressionB -> OR np_push_operator expression
Rule 82    expressionB -> AND np_push_operator expression
Rule 83    expressionB -> empty
Rule 84    logic -> exp logic2
Rule 85    logic2 -> LESS np_push_operator exp
Rule 86    logic2 -> GREATER np_push_operator exp
Rule 87    logic2 -> LESS_EQ np_push_operator exp
Rule 88    logic2 -> GREATER_EQ np_push_operator exp
Rule 89    logic2 -> EQUIVALENT np_push_operator exp
Rule 90    logic2 -> DIFFERENT np_push_operator exp
Rule 91    logic2 -> empty
Rule 92    exp -> term exp2
Rule 93    exp2 -> PLUS np_push_operator exp
Rule 94    exp2 -> MINUS np_push_operator exp
Rule 95    exp2 -> empty
Rule 96    term -> exponent term2
Rule 97    term2 -> MULT np_push_operator term
Rule 98    term2 -> DIV np_push_operator term
Rule 99    term2 -> REMAINDER np_push_operator term
Rule 100   term2 -> empty
Rule 101   exponent -> factor exponentB
Rule 102   exponentB -> EXP np_push_operator exponent
Rule 103   exponentB -> empty
Rule 104   factor -> L_PAR np_push_operator expression R_PAR np_rpar
Rule 105   factor -> var_cte
Rule 106   var_cte -> var
Rule 107   var_cte -> func_call
Rule 108   var_cte -> def_func
Rule 109   var_cte -> CTE_INT np_push_cte_int
Rule 110   var_cte -> CTE_FLOAT np_push_cte_float
Rule 111   var_cte -> CTE_CHAR np_push_cte_char
Rule 112   var_cte -> CTE_STRING np_push_cte_str
Rule 113   var_cte -> CTE_BOOL np_push_cte_bool
Rule 114   empty -> <empty>
Rule 115   np_set_curr_proc -> <empty>
Rule 116   np_push_operator -> <empty>
Rule 117   np_push_operand -> <empty>
Rule 118   np_push_cte_int -> <empty>
Rule 119   np_push_cte_float -> <empty>
Rule 120   np_push_cte_char -> <empty>
Rule 121   np_push_cte_str -> <empty>
Rule 122   np_push_cte_bool -> <empty>
Rule 123   np_set_curr_datatype -> <empty>
Rule 124   np_add_datatype -> <empty>
Rule 125   np_add_var -> <empty>
Rule 126   np_add_arr -> <empty>
Rule 127   np_rpar -> <empty>
Rule 128   np_set_return -> <empty>
Rule 129   np_end -> <empty>
Rule 130   np_read -> <empty>
Rule 131   np_write -> <empty>
Rule 132   np_set_CV -> <empty>
Rule 133   np_comp_CV_FV -> <empty>
Rule 134   np_GOTO -> <empty>
Rule 135   np_GOTOF -> <empty>
Rule 136   np_GOTO_ELSE -> <empty>
Rule 137   np_GOTO_END -> <empty>
Rule 138   np_GOTO_WHILE -> <empty>
Rule 139   np_GOTO_FOR -> <empty>
Rule 140   np_CHECKPOINT -> <empty>
Rule 141   np_add_param -> <empty>
Rule 142   np_set_quad_start -> <empty>
Rule 143   np_GOSUB -> <empty>
Rule 144   np_ERA -> <empty>
Rule 145   np_param -> <empty>
Rule 146   np_ENDFunc -> <empty>
Rule 147   np_arr_end -> <empty>
Rule 148   np_stop -> <empty>
Rule 149   np_prog_end -> <empty>
Rule 150   np_def_func_1param -> <empty>
Rule 151   np_def_func_2param -> <empty>

Terminals, with rules where they appear

AND                  : 82
BOOL                 : 19
CHAR                 : 20
COLON                : 7 8 26 27
COMMA                : 10 27 45 46 53 57 66
CTE_BOOL             : 113
CTE_CHAR             : 111
CTE_FLOAT            : 110
CTE_INT              : 12 109
CTE_STRING           : 56 112
DIFFERENT            : 90
DIV                  : 98
DIV_EQ               : 77
ELSE                 : 49
EQUAL                : 60 75
EQUIVALENT           : 89
EXP                  : 102
FLOAT                : 18
FOR                  : 60
FUNCTION             : 13
GREATER              : 86
GREATER_EQ           : 88
ID                   : 1 11 12 13 22 23 26 27 45 45 46 46 62 68
IF                   : 48
INT                  : 17
LESS                 : 85
LESS_EQ              : 87
L_BRACE              : 6 29 32
L_BRACKET            : 12 22
L_PAR                : 13 16 45 46 48 51 54 59 61 62 68 104
MAIN                 : 16
MAX                  : 70
MEAN                 : 71
MEDIAN               : 72
MIN                  : 69
MINUS                : 94
MINUS_EQ             : 79
MODE                 : 73
MULT                 : 97
MULT_EQ              : 76
OR                   : 81
PLOTXY               : 45
PLUS                 : 93
PLUS_EQ              : 78
PROGRAM              : 1
READ                 : 51
REGRESSION           : 46
REMAINDER            : 99
RETURN               : 61
R_BRACE              : 6 29 32
R_BRACKET            : 12 22
R_PAR                : 13 16 45 46 48 51 54 59 61 62 68 104
SEMICOLON            : 1 7 8 44 45 46 47 51 54 61
STRING               : 21
TO                   : 60
VARIANCE             : 74
VARS                 : 6
VOID                 : 24
WHILE                : 59
WRITE                : 54
error                : 

Nonterminals, with rules where they appear

assign               : 36
block                : 33 48 49 59 60
blockB               : 29 30
cond2                : 48
condicional          : 37
def_func             : 108
def_funcB            : 68
empty                : 15 28 31 35 50 58 64 67 83 91 95 100 103
exp                  : 22 60 60 61 65 84 85 86 87 88 89 90 93 94
exp2                 : 92
exponent             : 96 102
exponentB            : 101
expression           : 47 48 55 59 81 82 104
expressionB          : 80
factor               : 101
func_call            : 44 107
func_callB           : 62
func_call_arguments  : 63 66
func_call_argumentsB : 65
func_type            : 13
function             : 4
functionB            : 13
logic                : 80
logic2               : 84
loop_cond            : 40
loop_range           : 41
main                 : 5
np_CHECKPOINT        : 59
np_ENDFunc           : 13
np_ERA               : 62
np_GOSUB             : 62
np_GOTO              : 1
np_GOTOF             : 48 59
np_GOTO_ELSE         : 49
np_GOTO_END          : 16 48
np_GOTO_FOR          : 60
np_GOTO_WHILE        : 59
np_add_arr           : 12
np_add_datatype      : 17 18 19 20 21 24
np_add_param         : 26 27
np_add_var           : 11
np_arr_end           : 22
np_comp_CV_FV        : 60
np_def_func_1param   : 68
np_def_func_2param   : 45 46
np_end               : 22 47 48 55 59 60 61 65
np_param             : 65
np_prog_end          : 1
np_push_cte_bool     : 113
np_push_cte_char     : 111
np_push_cte_float    : 110
np_push_cte_int      : 109
np_push_cte_str      : 56 112
np_push_operand      : 23
np_push_operator     : 47 60 81 82 85 86 87 88 89 90 93 94 97 98 99 102 104
np_read              : 52 53
np_rpar              : 104
np_set_CV            : 60
np_set_curr_datatype : 7 8
np_set_curr_proc     : 1 13 16
np_set_quad_start    : 13
np_set_return        : 61
np_stop              : 22 61 65
np_write             : 55 56
oper_assign          : 47
params               : 14 27
program              : 0
programB             : 1
programC             : 2 3 4
read                 : 38
read2                : 51 53
return               : 42
statement            : 30 34
term                 : 92 97 98 99
term2                : 96
type                 : 7 8 25 26 27
var                  : 47 52 53 60 106
var_cte              : 105
vars                 : 2 32
varsB                : 6 8
varsC                : 7 8 10
varsD                : 9 10
vblock               : 13 16
vblockB              : 32 34
void_func            : 43
write                : 39
writeB               : 54 57
writeC               : 55 56

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM np_set_curr_proc ID np_GOTO SEMICOLON programB np_prog_end

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . np_set_curr_proc ID np_GOTO SEMICOLON programB np_prog_end
    (115) np_set_curr_proc -> .

    ID              reduce using rule 115 (np_set_curr_proc -> .)

    np_set_curr_proc               shift and go to state 3

state 3

    (1) program -> PROGRAM np_set_curr_proc . ID np_GOTO SEMICOLON programB np_prog_end

    ID              shift and go to state 4


state 4

    (1) program -> PROGRAM np_set_curr_proc ID . np_GOTO SEMICOLON programB np_prog_end
    (134) np_GOTO -> .

    SEMICOLON       reduce using rule 134 (np_GOTO -> .)

    np_GOTO                        shift and go to state 5

state 5

    (1) program -> PROGRAM np_set_curr_proc ID np_GOTO . SEMICOLON programB np_prog_end

    SEMICOLON       shift and go to state 6


state 6

    (1) program -> PROGRAM np_set_curr_proc ID np_GOTO SEMICOLON . programB np_prog_end
    (2) programB -> . vars programC
    (3) programB -> . programC
    (6) vars -> . VARS L_BRACE varsB R_BRACE
    (4) programC -> . function programC
    (5) programC -> . main
    (13) function -> . FUNCTION func_type ID np_set_curr_proc L_PAR functionB R_PAR np_set_quad_start vblock np_ENDFunc
    (16) main -> . MAIN np_set_curr_proc np_GOTO_END L_PAR R_PAR vblock

    VARS            shift and go to state 10
    FUNCTION        shift and go to state 13
    MAIN            shift and go to state 14

    programB                       shift and go to state 7
    vars                           shift and go to state 8
    programC                       shift and go to state 9
    function                       shift and go to state 11
    main                           shift and go to state 12

state 7

    (1) program -> PROGRAM np_set_curr_proc ID np_GOTO SEMICOLON programB . np_prog_end
    (149) np_prog_end -> .

    $end            reduce using rule 149 (np_prog_end -> .)

    np_prog_end                    shift and go to state 15

state 8

    (2) programB -> vars . programC
    (4) programC -> . function programC
    (5) programC -> . main
    (13) function -> . FUNCTION func_type ID np_set_curr_proc L_PAR functionB R_PAR np_set_quad_start vblock np_ENDFunc
    (16) main -> . MAIN np_set_curr_proc np_GOTO_END L_PAR R_PAR vblock

    FUNCTION        shift and go to state 13
    MAIN            shift and go to state 14

    programC                       shift and go to state 16
    function                       shift and go to state 11
    main                           shift and go to state 12

state 9

    (3) programB -> programC .

    $end            reduce using rule 3 (programB -> programC .)


state 10

    (6) vars -> VARS . L_BRACE varsB R_BRACE

    L_BRACE         shift and go to state 17


state 11

    (4) programC -> function . programC
    (4) programC -> . function programC
    (5) programC -> . main
    (13) function -> . FUNCTION func_type ID np_set_curr_proc L_PAR functionB R_PAR np_set_quad_start vblock np_ENDFunc
    (16) main -> . MAIN np_set_curr_proc np_GOTO_END L_PAR R_PAR vblock

    FUNCTION        shift and go to state 13
    MAIN            shift and go to state 14

    function                       shift and go to state 11
    programC                       shift and go to state 18
    main                           shift and go to state 12

state 12

    (5) programC -> main .

    $end            reduce using rule 5 (programC -> main .)


state 13

    (13) function -> FUNCTION . func_type ID np_set_curr_proc L_PAR functionB R_PAR np_set_quad_start vblock np_ENDFunc
    (24) func_type -> . VOID np_add_datatype
    (25) func_type -> . type
    (17) type -> . INT np_add_datatype
    (18) type -> . FLOAT np_add_datatype
    (19) type -> . BOOL np_add_datatype
    (20) type -> . CHAR np_add_datatype
    (21) type -> . STRING np_add_datatype

    VOID            shift and go to state 20
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    BOOL            shift and go to state 24
    CHAR            shift and go to state 25
    STRING          shift and go to state 26

    func_type                      shift and go to state 19
    type                           shift and go to state 21

state 14

    (16) main -> MAIN . np_set_curr_proc np_GOTO_END L_PAR R_PAR vblock
    (115) np_set_curr_proc -> .

    L_PAR           reduce using rule 115 (np_set_curr_proc -> .)

    np_set_curr_proc               shift and go to state 27

state 15

    (1) program -> PROGRAM np_set_curr_proc ID np_GOTO SEMICOLON programB np_prog_end .

    $end            reduce using rule 1 (program -> PROGRAM np_set_curr_proc ID np_GOTO SEMICOLON programB np_prog_end .)


state 16

    (2) programB -> vars programC .

    $end            reduce using rule 2 (programB -> vars programC .)


state 17

    (6) vars -> VARS L_BRACE . varsB R_BRACE
    (7) varsB -> . type np_set_curr_datatype COLON varsC SEMICOLON
    (8) varsB -> . type np_set_curr_datatype COLON varsC SEMICOLON varsB
    (17) type -> . INT np_add_datatype
    (18) type -> . FLOAT np_add_datatype
    (19) type -> . BOOL np_add_datatype
    (20) type -> . CHAR np_add_datatype
    (21) type -> . STRING np_add_datatype

    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    BOOL            shift and go to state 24
    CHAR            shift and go to state 25
    STRING          shift and go to state 26

    varsB                          shift and go to state 28
    type                           shift and go to state 29

state 18

    (4) programC -> function programC .

    $end            reduce using rule 4 (programC -> function programC .)


state 19

    (13) function -> FUNCTION func_type . ID np_set_curr_proc L_PAR functionB R_PAR np_set_quad_start vblock np_ENDFunc

    ID              shift and go to state 30


state 20

    (24) func_type -> VOID . np_add_datatype
    (124) np_add_datatype -> .

    ID              reduce using rule 124 (np_add_datatype -> .)

    np_add_datatype                shift and go to state 31

state 21

    (25) func_type -> type .

    ID              reduce using rule 25 (func_type -> type .)


state 22

    (17) type -> INT . np_add_datatype
    (124) np_add_datatype -> .

    ID              reduce using rule 124 (np_add_datatype -> .)
    COLON           reduce using rule 124 (np_add_datatype -> .)

    np_add_datatype                shift and go to state 32

state 23

    (18) type -> FLOAT . np_add_datatype
    (124) np_add_datatype -> .

    ID              reduce using rule 124 (np_add_datatype -> .)
    COLON           reduce using rule 124 (np_add_datatype -> .)

    np_add_datatype                shift and go to state 33

state 24

    (19) type -> BOOL . np_add_datatype
    (124) np_add_datatype -> .

    ID              reduce using rule 124 (np_add_datatype -> .)
    COLON           reduce using rule 124 (np_add_datatype -> .)

    np_add_datatype                shift and go to state 34

state 25

    (20) type -> CHAR . np_add_datatype
    (124) np_add_datatype -> .

    ID              reduce using rule 124 (np_add_datatype -> .)
    COLON           reduce using rule 124 (np_add_datatype -> .)

    np_add_datatype                shift and go to state 35

state 26

    (21) type -> STRING . np_add_datatype
    (124) np_add_datatype -> .

    ID              reduce using rule 124 (np_add_datatype -> .)
    COLON           reduce using rule 124 (np_add_datatype -> .)

    np_add_datatype                shift and go to state 36

state 27

    (16) main -> MAIN np_set_curr_proc . np_GOTO_END L_PAR R_PAR vblock
    (137) np_GOTO_END -> .

    L_PAR           reduce using rule 137 (np_GOTO_END -> .)

    np_GOTO_END                    shift and go to state 37

state 28

    (6) vars -> VARS L_BRACE varsB . R_BRACE

    R_BRACE         shift and go to state 38


state 29

    (7) varsB -> type . np_set_curr_datatype COLON varsC SEMICOLON
    (8) varsB -> type . np_set_curr_datatype COLON varsC SEMICOLON varsB
    (123) np_set_curr_datatype -> .

    COLON           reduce using rule 123 (np_set_curr_datatype -> .)

    np_set_curr_datatype           shift and go to state 39

state 30

    (13) function -> FUNCTION func_type ID . np_set_curr_proc L_PAR functionB R_PAR np_set_quad_start vblock np_ENDFunc
    (115) np_set_curr_proc -> .

    L_PAR           reduce using rule 115 (np_set_curr_proc -> .)

    np_set_curr_proc               shift and go to state 40

state 31

    (24) func_type -> VOID np_add_datatype .

    ID              reduce using rule 24 (func_type -> VOID np_add_datatype .)


state 32

    (17) type -> INT np_add_datatype .

    ID              reduce using rule 17 (type -> INT np_add_datatype .)
    COLON           reduce using rule 17 (type -> INT np_add_datatype .)


state 33

    (18) type -> FLOAT np_add_datatype .

    ID              reduce using rule 18 (type -> FLOAT np_add_datatype .)
    COLON           reduce using rule 18 (type -> FLOAT np_add_datatype .)


state 34

    (19) type -> BOOL np_add_datatype .

    ID              reduce using rule 19 (type -> BOOL np_add_datatype .)
    COLON           reduce using rule 19 (type -> BOOL np_add_datatype .)


state 35

    (20) type -> CHAR np_add_datatype .

    ID              reduce using rule 20 (type -> CHAR np_add_datatype .)
    COLON           reduce using rule 20 (type -> CHAR np_add_datatype .)


state 36

    (21) type -> STRING np_add_datatype .

    ID              reduce using rule 21 (type -> STRING np_add_datatype .)
    COLON           reduce using rule 21 (type -> STRING np_add_datatype .)


state 37

    (16) main -> MAIN np_set_curr_proc np_GOTO_END . L_PAR R_PAR vblock

    L_PAR           shift and go to state 41


state 38

    (6) vars -> VARS L_BRACE varsB R_BRACE .

    FUNCTION        reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    MAIN            reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    IF              reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    READ            reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    WRITE           reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    WHILE           reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    FOR             reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    RETURN          reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    PLOTXY          reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    REGRESSION      reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    ID              reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)
    R_BRACE         reduce using rule 6 (vars -> VARS L_BRACE varsB R_BRACE .)


state 39

    (7) varsB -> type np_set_curr_datatype . COLON varsC SEMICOLON
    (8) varsB -> type np_set_curr_datatype . COLON varsC SEMICOLON varsB

    COLON           shift and go to state 42


state 40

    (13) function -> FUNCTION func_type ID np_set_curr_proc . L_PAR functionB R_PAR np_set_quad_start vblock np_ENDFunc

    L_PAR           shift and go to state 43


state 41

    (16) main -> MAIN np_set_curr_proc np_GOTO_END L_PAR . R_PAR vblock

    R_PAR           shift and go to state 44


state 42

    (7) varsB -> type np_set_curr_datatype COLON . varsC SEMICOLON
    (8) varsB -> type np_set_curr_datatype COLON . varsC SEMICOLON varsB
    (9) varsC -> . varsD
    (10) varsC -> . varsD COMMA varsC
    (11) varsD -> . ID np_add_var
    (12) varsD -> . ID L_BRACKET CTE_INT R_BRACKET np_add_arr

    ID              shift and go to state 47

    varsC                          shift and go to state 45
    varsD                          shift and go to state 46

state 43

    (13) function -> FUNCTION func_type ID np_set_curr_proc L_PAR . functionB R_PAR np_set_quad_start vblock np_ENDFunc
    (14) functionB -> . params
    (15) functionB -> . empty
    (26) params -> . type COLON ID np_add_param
    (27) params -> . type COLON ID np_add_param COMMA params
    (28) params -> . empty
    (114) empty -> .
    (17) type -> . INT np_add_datatype
    (18) type -> . FLOAT np_add_datatype
    (19) type -> . BOOL np_add_datatype
    (20) type -> . CHAR np_add_datatype
    (21) type -> . STRING np_add_datatype

    R_PAR           reduce using rule 114 (empty -> .)
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    BOOL            shift and go to state 24
    CHAR            shift and go to state 25
    STRING          shift and go to state 26

    functionB                      shift and go to state 48
    params                         shift and go to state 49
    empty                          shift and go to state 50
    type                           shift and go to state 51

state 44

    (16) main -> MAIN np_set_curr_proc np_GOTO_END L_PAR R_PAR . vblock
    (32) vblock -> . L_BRACE vars vblockB R_BRACE
    (33) vblock -> . block
    (29) block -> . L_BRACE blockB R_BRACE

    L_BRACE         shift and go to state 53

    vblock                         shift and go to state 52
    block                          shift and go to state 54

state 45

    (7) varsB -> type np_set_curr_datatype COLON varsC . SEMICOLON
    (8) varsB -> type np_set_curr_datatype COLON varsC . SEMICOLON varsB

    SEMICOLON       shift and go to state 55


state 46

    (9) varsC -> varsD .
    (10) varsC -> varsD . COMMA varsC

    SEMICOLON       reduce using rule 9 (varsC -> varsD .)
    COMMA           shift and go to state 56


state 47

    (11) varsD -> ID . np_add_var
    (12) varsD -> ID . L_BRACKET CTE_INT R_BRACKET np_add_arr
    (125) np_add_var -> .

    L_BRACKET       shift and go to state 58
    COMMA           reduce using rule 125 (np_add_var -> .)
    SEMICOLON       reduce using rule 125 (np_add_var -> .)

    np_add_var                     shift and go to state 57

state 48

    (13) function -> FUNCTION func_type ID np_set_curr_proc L_PAR functionB . R_PAR np_set_quad_start vblock np_ENDFunc

    R_PAR           shift and go to state 59


state 49

    (14) functionB -> params .

    R_PAR           reduce using rule 14 (functionB -> params .)


state 50

    (15) functionB -> empty .
    (28) params -> empty .

  ! reduce/reduce conflict for R_PAR resolved using rule 15 (functionB -> empty .)
    R_PAR           reduce using rule 15 (functionB -> empty .)

  ! R_PAR           [ reduce using rule 28 (params -> empty .) ]


state 51

    (26) params -> type . COLON ID np_add_param
    (27) params -> type . COLON ID np_add_param COMMA params

    COLON           shift and go to state 60


state 52

    (16) main -> MAIN np_set_curr_proc np_GOTO_END L_PAR R_PAR vblock .

    $end            reduce using rule 16 (main -> MAIN np_set_curr_proc np_GOTO_END L_PAR R_PAR vblock .)


state 53

    (32) vblock -> L_BRACE . vars vblockB R_BRACE
    (29) block -> L_BRACE . blockB R_BRACE
    (6) vars -> . VARS L_BRACE varsB R_BRACE
    (30) blockB -> . statement blockB
    (31) blockB -> . empty
    (36) statement -> . assign
    (37) statement -> . condicional
    (38) statement -> . read
    (39) statement -> . write
    (40) statement -> . loop_cond
    (41) statement -> . loop_range
    (42) statement -> . return
    (43) statement -> . void_func
    (114) empty -> .
    (47) assign -> . var oper_assign np_push_operator expression np_end SEMICOLON
    (48) condicional -> . IF L_PAR expression np_end np_GOTOF R_PAR block cond2 np_GOTO_END
    (51) read -> . READ L_PAR read2 R_PAR SEMICOLON
    (54) write -> . WRITE L_PAR writeB R_PAR SEMICOLON
    (59) loop_cond -> . WHILE L_PAR np_CHECKPOINT expression R_PAR np_end np_GOTOF block np_GOTO_WHILE
    (60) loop_range -> . FOR var EQUAL np_push_operator exp np_set_CV TO exp np_end np_comp_CV_FV block np_GOTO_FOR
    (61) return -> . RETURN L_PAR np_stop exp np_end np_set_return R_PAR SEMICOLON
    (44) void_func -> . func_call SEMICOLON
    (45) void_func -> . PLOTXY L_PAR ID COMMA ID R_PAR np_def_func_2param SEMICOLON
    (46) void_func -> . REGRESSION L_PAR ID COMMA ID R_PAR np_def_func_2param SEMICOLON
    (22) var -> . ID L_BRACKET np_stop exp np_end np_arr_end R_BRACKET
    (23) var -> . ID np_push_operand
    (62) func_call -> . ID np_ERA L_PAR func_callB R_PAR np_GOSUB

    VARS            shift and go to state 10
    R_BRACE         reduce using rule 114 (empty -> .)
    IF              shift and go to state 74
    READ            shift and go to state 75
    WRITE           shift and go to state 76
    WHILE           shift and go to state 77
    FOR             shift and go to state 78
    RETURN          shift and go to state 79
    PLOTXY          shift and go to state 81
    REGRESSION      shift and go to state 83
    ID              shift and go to state 82

    vars                           shift and go to state 61
    blockB                         shift and go to state 62
    statement                      shift and go to state 63
    empty                          shift and go to state 64
    assign                         shift and go to state 65
    condicional                    shift and go to state 66
    read                           shift and go to state 67
    write                          shift and go to state 68
    loop_cond                      shift and go to state 69
    loop_range                     shift and go to state 70
    return                         shift and go to state 71
    void_func                      shift and go to state 72
    var                            shift and go to state 73
    func_call                      shift and go to state 80

state 54

    (33) vblock -> block .

    $end            reduce using rule 33 (vblock -> block .)
    FUNCTION        reduce using rule 33 (vblock -> block .)
    MAIN            reduce using rule 33 (vblock -> block .)


state 55

    (7) varsB -> type np_set_curr_datatype COLON varsC SEMICOLON .
    (8) varsB -> type np_set_curr_datatype COLON varsC SEMICOLON . varsB
    (7) varsB -> . type np_set_curr_datatype COLON varsC SEMICOLON
    (8) varsB -> . type np_set_curr_datatype COLON varsC SEMICOLON varsB
    (17) type -> . INT np_add_datatype
    (18) type -> . FLOAT np_add_datatype
    (19) type -> . BOOL np_add_datatype
    (20) type -> . CHAR np_add_datatype
    (21) type -> . STRING np_add_datatype

    R_BRACE         reduce using rule 7 (varsB -> type np_set_curr_datatype COLON varsC SEMICOLON .)
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    BOOL            shift and go to state 24
    CHAR            shift and go to state 25
    STRING          shift and go to state 26

    type                           shift and go to state 29
    varsB                          shift and go to state 84

state 56

    (10) varsC -> varsD COMMA . varsC
    (9) varsC -> . varsD
    (10) varsC -> . varsD COMMA varsC
    (11) varsD -> . ID np_add_var
    (12) varsD -> . ID L_BRACKET CTE_INT R_BRACKET np_add_arr

    ID              shift and go to state 47

    varsD                          shift and go to state 46
    varsC                          shift and go to state 85

state 57

    (11) varsD -> ID np_add_var .

    COMMA           reduce using rule 11 (varsD -> ID np_add_var .)
    SEMICOLON       reduce using rule 11 (varsD -> ID np_add_var .)


state 58

    (12) varsD -> ID L_BRACKET . CTE_INT R_BRACKET np_add_arr

    CTE_INT         shift and go to state 86


state 59

    (13) function -> FUNCTION func_type ID np_set_curr_proc L_PAR functionB R_PAR . np_set_quad_start vblock np_ENDFunc
    (142) np_set_quad_start -> .

    L_BRACE         reduce using rule 142 (np_set_quad_start -> .)

    np_set_quad_start              shift and go to state 87

state 60

    (26) params -> type COLON . ID np_add_param
    (27) params -> type COLON . ID np_add_param COMMA params

    ID              shift and go to state 88


state 61

    (32) vblock -> L_BRACE vars . vblockB R_BRACE
    (34) vblockB -> . statement vblockB
    (35) vblockB -> . empty
    (36) statement -> . assign
    (37) statement -> . condicional
    (38) statement -> . read
    (39) statement -> . write
    (40) statement -> . loop_cond
    (41) statement -> . loop_range
    (42) statement -> . return
    (43) statement -> . void_func
    (114) empty -> .
    (47) assign -> . var oper_assign np_push_operator expression np_end SEMICOLON
    (48) condicional -> . IF L_PAR expression np_end np_GOTOF R_PAR block cond2 np_GOTO_END
    (51) read -> . READ L_PAR read2 R_PAR SEMICOLON
    (54) write -> . WRITE L_PAR writeB R_PAR SEMICOLON
    (59) loop_cond -> . WHILE L_PAR np_CHECKPOINT expression R_PAR np_end np_GOTOF block np_GOTO_WHILE
    (60) loop_range -> . FOR var EQUAL np_push_operator exp np_set_CV TO exp np_end np_comp_CV_FV block np_GOTO_FOR
    (61) return -> . RETURN L_PAR np_stop exp np_end np_set_return R_PAR SEMICOLON
    (44) void_func -> . func_call SEMICOLON
    (45) void_func -> . PLOTXY L_PAR ID COMMA ID R_PAR np_def_func_2param SEMICOLON
    (46) void_func -> . REGRESSION L_PAR ID COMMA ID R_PAR np_def_func_2param SEMICOLON
    (22) var -> . ID L_BRACKET np_stop exp np_end np_arr_end R_BRACKET
    (23) var -> . ID np_push_operand
    (62) func_call -> . ID np_ERA L_PAR func_callB R_PAR np_GOSUB

    R_BRACE         reduce using rule 114 (empty -> .)
    IF              shift and go to state 74
    READ            shift and go to state 75
    WRITE           shift and go to state 76
    WHILE           shift and go to state 77
    FOR             shift and go to state 78
    RETURN          shift and go to state 79
    PLOTXY          shift and go to state 81
    REGRESSION      shift and go to state 83
    ID              shift and go to state 82

    vblockB                        shift and go to state 89
    statement                      shift and go to state 90
    empty                          shift and go to state 91
    assign                         shift and go to state 65
    condicional                    shift and go to state 66
    read                           shift and go to state 67
    write                          shift and go to state 68
    loop_cond                      shift and go to state 69
    loop_range                     shift and go to state 70
    return                         shift and go to state 71
    void_func                      shift and go to state 72
    var                            shift and go to state 73
    func_call                      shift and go to state 80

state 62

    (29) block -> L_BRACE blockB . R_BRACE

    R_BRACE         shift and go to state 92


state 63
